--- a/app/views/philosophers/index.html.erb
+++ b/app/views/philosophers/index.html.erb
@@ -20,8 +20,10 @@
               <div class="prestations-field">
                 <%= select_tag "prestations", options_for_select(Philosopher::PRESTATIONS, params[:prestations]), class: "form-control", prompt: 'Prestations', multiple: true %>
               </div>
-            <%= submit_tag "Search", class: "btn btn-primary" %>
+              <%= submit_tag "Search", class: "primary-btn" %>
+              <%= link_to "Reset search", philosophers_path, class: "secondary-btn" %>
           </div>
+
           <% end %>
 
 
