add placeholder and box-shadow in primary color

--- a/app/assets/stylesheets/components/_form-create.scss
+++ b/app/assets/stylesheets/components/_form-create.scss
@@ -19,4 +19,11 @@
     border: none;
     width: 100%;
   }
+
+  .default-input:focus {
+    border: none;
+    outline: 0;
+    box-shadow: $box-shadow-form;
+  }
+
 }
