--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -16,6 +16,7 @@ $border-color: hsl(0, 0%, 87%);
 
 // -- Box shadow --
 $box-shadow-color: 0px 2px 8px rgba(0,0,0,0.15);
+$box-shadow-form: 0 0 0 0.2rem hsla(349, 100%, 61%, 0.30);
 
 
 
