--- a/app/views/philosophers/show.html.erb
+++ b/app/views/philosophers/show.html.erb
@@ -35,8 +35,8 @@
             <% end %>
           </ul>
         </div>
-
-        <h3 class='title'><%= @philosopher.price_per_night%>€ per night</h3>
+        
+        <h3 class='title'> <span id="price"><%= @philosopher.price_per_night %></span>€ per night</h3>
         <% if @philosopher.first_name %>
           <%= link_to "Party with #{@philosopher.first_name} #{@philosopher.last_name}",'#',  class:"primary-btn",id:"book-btn" %>
         <% else %>
@@ -53,7 +53,7 @@
           <% end %>
         </div>
 
-        <div class="booking-form" id="book-form">
+        <div class="booking-form active" id="book-form">
           <div class="container-flex">
             <div class="form-part">
 
@@ -67,7 +67,11 @@
                 <%= simple_form_for [ @philosopher, @reservation ] do |f| %>
                   <%= f.input :start_date, as: :string, required: false, input_html: { id: "range_start" } %>
                   <%= f.input :end_date, as: :string, required: false, input_html: { id: "range_end" } %>
-                  <%= f.input :address %>
+                  <%= f.input :address, id: "address-field" %>
+                  <%#= f.input :total_price %>
+                  <div>
+                  <h4 class="title mt-1"><span class="d-none" id="reservation_total_price"></span></h4>  
+                  </div>
                   <%= f.submit class: "primary-btn" %>
                 <% end %>
               </div>
