Dimitri a fait des choses

--- a/app/views/philosophers/_info_window.html.erb
+++ b/app/views/philosophers/_info_window.html.erb
@@ -1,9 +1,11 @@
-<div class="popup-photo">
-  <% if philosopher.photo.attached? %>
-    <%= cl_image_tag philosopher.photo.key, crop: :fill, height:200 %>
-  <% end %>
-</div>
-<div class="popup-content">
-  <p class="body"><%= philosopher.last_name %></p>
-  <p class="body-strong"><%= philosopher.price_per_night %>€/night</p>
-</div>
+<%= link_to philosopher_path(philosopher) do %>
+  <div class="popup-photo">
+    <% if philosopher.photo.attached? %>
+      <%= cl_image_tag philosopher.photo.key, crop: :fill, height:200 %>
+    <% end %>
+  </div>
+  <div class="popup-content">
+    <p class="body"><%= philosopher.last_name %></p>
+    <p class="body-strong"><%= philosopher.price_per_night %>€/night</p>
+  </div>
+<% end %>
