--- a/app/views/philosophers/index.html.erb
+++ b/app/views/philosophers/index.html.erb
@@ -1,7 +1,5 @@
-  <div class="row">
-
+  <div class="row m-0">
     <div class="col-12 col-lg-7 p-0">
-      <div class="container">
         <div class="cont-index-philosopher">
           <h1 class="title">All philosophers</h1>
 
@@ -61,16 +59,16 @@
             <% end %>
           </div>
         </div>
-      </div>
     </div>
 
     <div class="col-12 col-lg-5 p-0">
       <div id="map"
-          style="width: 100%; height: 100vh;"
+          style="height: 100vh;"
           data-markers="<%= @markers.to_json %>"
           data-mapbox-api-key= "<%= ENV['MAPBOX_API_KEY'] %>" >
       </div>
     </div>
 
   </div>
+
 
