--- a/app/views/philosophers/index.html.erb
+++ b/app/views/philosophers/index.html.erb
@@ -63,7 +63,7 @@
 
     <div class="col-12 col-lg-5 p-0">
       <div id="map"
-          style="height: 100vh;"
+          style="width: 100%; height: 100vh;"
           data-markers="<%= @markers.to_json %>"
           data-mapbox-api-key= "<%= ENV['MAPBOX_API_KEY'] %>" >
       </div>
