correct typo placeholder first_name

--- a/app/views/philosophers/new.html.erb
+++ b/app/views/philosophers/new.html.erb
@@ -8,7 +8,7 @@
           <%= simple_form_for @philosopher do |f| %>
             <div class="row">
               <div class="col-12 col-lg-6">
-                <%= f.input :first_name, placeholder: "Fisrt name", input_html: { class: "default-input" } %>
+                <%= f.input :first_name, placeholder: "First name", input_html: { class: "default-input" } %>
               </div>
               <div class="col-12 col-lg-6">
                 <%= f.input :last_name, placeholder: "Last name", input_html: { class: "default-input" } %>
