--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -9,7 +9,7 @@
   h1 {
     color: $high-text-color;
     margin-bottom: 32px;
-    margin-top: 80px;
+    margin-top: 32px;
   }
   
   h2 {
@@ -117,6 +117,7 @@
     img {
       height: 100vh;
       width: 100%;
+      object-fit: cover;
     }
     
     .booking-form {
