--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,6 +5,8 @@
     <%= form_tag philosophers_path, method: :get do %>
     <div class="form-group-home">
         <div class="location-field">
+          <%= date_field_tag :start_date %>
+          <%= date_field_tag :end_date %>
           <%= text_field_tag :location,
             params[:location],
             class: "form-control",
