added address and FA to reservation card"

--- a/app/views/reservations/my_reservations.html.erb
+++ b/app/views/reservations/my_reservations.html.erb
@@ -5,7 +5,7 @@
     <div class="cont-index-philosopher">
       <h1 class="title">My reservations</h1>
       <div class="con-cards-index">
-        <% @my_reservations.each do |reservation| %>
+        <% @my_reservations.sort.reverse.each do |reservation| %>
           <h3 class="title"><%= link_to philosopher_path(reservation.philosopher) do %></h3>
           
             <div class="card-philosopher">
@@ -25,10 +25,11 @@
                   <% end %>
                 </h3>
 
-                <p class="body">from <%= reservation.start_date.strftime("%A, %b %d") %> to <%= reservation.end_date.strftime("%A, %b %d") %></p>
+                <p class="body"><i class="fas fa-table"></i> from <%= reservation.start_date.strftime("%A, %b %d") %> to <%= reservation.end_date.strftime("%A, %b %d") %></p>
+                <p class="body"><i class="fas fa-map-marker-alt"></i> <%= reservation.address %></p>
                 <% night = (reservation.end_date - reservation.start_date).to_i %>
                 <% price = reservation.philosopher.price_per_night %>
-                <p class="body-strong"> <%= night * price %>€ for <%= night %> nights</p>
+                <h4 class="title"> <%= night * price %>€ for <%= night %> nights</h4>
               </div>
             </div>
           <% end %>
