add form in navbar only in index

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,7 +6,16 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
+  
+  <% if controller.controller_name == "philosophers" && controller.action_name == "index" %>
+    <div class="location-field">
+                <%= text_field_tag :location,
+                  params[:location],
+                  class: "form-control",
+                  placeholder: "Where?"
+                %>
+              </div>
+  <% end %>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto d-flex align-items-baseline">
