--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,10 @@
   </head>
 
   <body>
-    <%= render 'shared/navbar' %>
-    <%= yield %>
-    <%= render 'shared/footer' %>
+      <%= render 'shared/navbar' %>
+    <div class="page-content">
+      <%= yield %>
+    </div>
+      <%= render 'shared/footer' %>
   </body>
 </html>
