--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,9 +4,9 @@
     <p class="body-strong">Rent a philosopher and enjoy little wisdom nuggets dropped at your feet.</p>
 
 
-        <%= simple_form_for :search, url: philosophers_path, method: :get do |f| %>
+        <%= simple_form_for '', url: philosophers_path, method: :get do |f| %>
             <%= f.input :start_date, as: :string, required: false, input_html: { id: "range_start" }, placeholder: "Start", label: "Period" %>
-            <%= f.input :location, id: "location" %>
+            <%= f.input :location, input_html: { id: "search_location" } %>
             <%= f.submit class: "primary-btn" %>
         <% end %>
 
