--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,7 +1,8 @@
 
 .content {
   padding: 24px;
-  
+  height: calc(100vh - 80px);
+
   p {
     margin: 0;
   }
@@ -11,7 +12,7 @@
     margin-bottom: 32px;
     margin-top: 32px;
   }
-  
+
   h2 {
     color: $medium-text-color;
   }
@@ -29,11 +30,12 @@
   .fas {
     color: black;
     font-size: 24px;
-  } 
+  }
 }
 
 .cont-nationality {
   margin-bottom: 24px;
+  margin-right: 16px;
 }
 
 .cont-specialty {
@@ -56,9 +58,9 @@
       display: inline-block;
       list-style: none;
       color: $medium-text-color;
-      margin-right: 8px; 
+      margin-right: 8px;
       margin-bottom: 8px;
-  
+
       &:hover {
         box-shadow: $box-shadow-color;
       }
@@ -71,6 +73,8 @@
   padding: 16px;
   border-radius: 8px;
   margin-bottom: 24px;
+  max-height: 250px;
+  overflow: scroll;
 
     p {
       margin: 0;
@@ -84,20 +88,20 @@
 
 .form {
   width: 200px;
-  display: inline;  
+  display: inline;
 }
 
 .cont-photo {
-  position: relative;  
+  position: relative;
   position: sticky;
     top: 0;
 
   img {
-    height: 100vh;
+    height: calc(100vh - 80px);
     width: 100%;
     object-fit: cover;
   }
-    
+
   .booking-form {
   opacity: 0;
   position: absolute;
@@ -131,4 +135,9 @@
       width: 100%;
       text-align: center;
     }
+}
+
+.cont-info {
+  display: flex;
+  justify-content: space-start;
 }
