--- a/app/views/philosophers/show.html.erb
+++ b/app/views/philosophers/show.html.erb
@@ -2,8 +2,8 @@
   <div class="row">
     <div class="col-12 col-lg-6">
       <div class="content">
-        <%= link_to philosophers_path do%> 
-          <i class="fas fa-arrow-left"></i> 
+        <%= link_to philosophers_path do%>
+          <i class="fas fa-arrow-left"></i>
         <% end %>
         <% if @philosopher.first_name %>
           <h1 class="title"><%= @philosopher.first_name %> <%= @philosopher.last_name %></h1>
@@ -11,14 +11,16 @@
           <h1 class="title"><%= @philosopher.last_name %></h1>
         <% end %>
 
-        <div class="cont-nationality d-flex align-items-baseline">
-          <p class="body-strong mr-2">Nationality:</p>
-          <p class="body"><%= @philosopher.nationality %></p>
-        </div>      
+        <div class="cont-info">
+          <div class="cont-nationality d-flex align-items-baseline">
+            <p class="body-strong mr-2">Nationality:</p>
+            <p class="body"><%= @philosopher.nationality %></p>
+          </div>
 
-        <div class="cont-specialty d-flex align-items-baseline">
-          <p class="body-strong mr-2">Specialty:</p>
-          <p class="body"><%= @philosopher.specialty %></p>
+          <div class="cont-specialty d-flex align-items-baseline">
+            <p class="body-strong mr-2">Specialty:</p>
+            <p class="body"><%= @philosopher.specialty %></p>
+          </div>
         </div>
 
         <div class="cont-description">
@@ -35,7 +37,7 @@
             <% end %>
           </ul>
         </div>
-        
+
         <h3 class='title'> <span id="price"><%= @philosopher.price_per_night %></span>€ per night</h3>
         <!-- Button trigger modal -->
         <% if @philosopher.first_name %>
@@ -82,14 +84,14 @@
                 <h2 class="title">Book <%= @philosopher.first_name %> <%= @philosopher.last_name %></h2>
               <% else %>
                 <h2 class="title"><%= @philosopher.last_name %></h2>
-              <% end %> 
-              
+              <% end %>
+
                 <%= simple_form_for [ @philosopher, @reservation ] do |f| %>
                   <%= f.input :start_date, as: :string, required: false, input_html: { id: "range_start" }, placeholder: "Start" %>
                   <%= f.input :end_date, as: :string, required: false, input_html: { id: "range_end" }, placeholder: "End" %>
                   <%= f.input :address %>
                   <div>
-                    <h4 class="title mt-1"><span class="d-none" id="reservation_total_price"></span></h4>  
+                    <h4 class="title mt-1"><span class="d-none" id="reservation_total_price"></span></h4>
                   </div>
                   <%= f.submit class: "primary-btn" %>
                 <% end %>
