--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -20,29 +20,59 @@
   }
 }
 
-.form-group-home {
+.con-search-form {
   display: flex;
-}
+  justify-content: center;
 
-#search-btn-home {
-  padding: 8px 16px;
-}
-
-.specialty-field, .location-field {
-  margin-right: 10px;
-  input {
-    border-radius: 25px;
+  .con-simple-form {
+    display: flex;
+    justify-items: center;
+    width: 100%;
   }
-  ::placeholder {
-    opacity: .5;
+
+  .wrapper-search-algolia {
+    flex-grow: 1;
+  }
+
+  .wrapper-search-date {
+    margin: 0 24px;
+  }
+
+  .form-label-hidden {
+    display: none;
+  }
+
+  .default-input {
+    background-color: $main-background-color;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.25);
+    padding: 0px 16px;
+    border: none;
+    height: 60px;
+    border-radius: 8px;
+    border: 2px transparent solid;
+
+    &:focus {
+      border: 2px $primary-color solid;
+    }
+
   }
 }
 
-#specialty {
-  border-radius: 25px;
-  appearance: none;
-  background-image: url(https://cdn1.iconfinder.com/data/icons/ios-11-ui-elements-vol-1/29/25_dropdown_menu_down_arrow-512.png);
-  background-repeat: no-repeat, repeat;
-  background-position: right .7em top 50%, 0 0;
-  background-size: 1em auto, 100%;
-}
+
+// .form-group-home {
+//   display: flex;
+// }
+
+// #search-btn-home {
+//   padding: 8px 16px;
+// }
+
+// .specialty-field, .location-field {
+//   margin-right: 10px;
+//   input {
+//     border-radius: 25px;
+//   }
+//   ::placeholder {
+//     opacity: .5;
+//   }
+// }
