--- a/app/views/philosophers/index.html.erb
+++ b/app/views/philosophers/index.html.erb
@@ -1,10 +1,10 @@
   <div class="row m-0">
     <div class="col-12 col-lg-7 p-0">
         <div class="cont-index-philosopher">
-          <% if params['location'] %>
-            <h1 class="title">philosophers in <%= params['location'] %>   </h1>
-          <% else %>
+          <% if params['location'] == "" %>
             <h1 class="title">Philosophers</h1>
+          <% else %>
+            <h1 class="title">Philosophers in <%= params['location'] %>   </h1>
           <% end %>
           <%= form_tag philosophers_path, method: :get do %>
           <div class="form-group-home">
