--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
             <%= image_tag 'https://images.unsplash.com/photo-1593240637899-5fc06c754c2b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1240&q=80', alt: "category", class: 'img-card-philo' %>
           </div>
           <div class="con-text">
-            <h4 class="title">Logic</h4>
+            <h4 class="title"><a href="/philosophers?location=&start_date=&specialty=Ethics&commit=Search">Logic</a></h4>
             <p class="body-small">In it simplest construction, logic is the academic study of reasoning.</p>
           </div>
         </div>
