--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -34,4 +34,8 @@
 .popup-content {
   padding: 8px;
   text-align: left;
+  text-decoration: none;
+  &:hover {
+    text-shadow: 1px 1px 3px rgba(0,0,0, 0.2);
+  }
 }
