add links to categories

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -58,6 +58,14 @@
   }
 }
 
+.card-philo a {
+  text-decoration: none;
+  color: #707070;
+  &:hover {
+    color: black;
+  }
+}
+
 
 // .form-group-home {
 //   display: flex;
