--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
             <%= image_tag 'https://images.unsplash.com/photo-1593240637899-5fc06c754c2b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1240&q=80', alt: "category", class: 'img-card-philo' %>
           </div>
           <div class="con-text">
-            <h4 class="title"><a href="/philosophers?location=&start_date=&specialty=Ethics&commit=Search">Logic</a></h4>
+            <h4 class="title"><a href="/philosophers?location=&start_date=&specialty=Logic&commit=Search">Logic</a></h4>
             <p class="body-small">In it simplest construction, logic is the academic study of reasoning.</p>
           </div>
         </div>
@@ -31,7 +31,7 @@
             <%= image_tag 'https://images.unsplash.com/photo-1528217580778-96e570819666?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1301&q=80', alt: "category", class: 'img-card-philo' %>
           </div>
           <div class="con-text">
-            <h4 class="title">Ethics</h4>
+            <h4 class="title"><a href="/philosophers?location=&start_date=&specialty=Ethics&commit=Search">Ethics</a></h4>
             <p class="body-small">Ethics broadly defined, is moral philosophy.</p>
           </div>
         </div>
@@ -40,7 +40,7 @@
             <%= image_tag 'https://images.unsplash.com/photo-1532012197267-da84d127e765?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1234&q=80', alt: "category", class: 'img-card-philo' %>
           </div>
           <div class="con-text">
-            <h4 class="title">Epistemology</h4>
+            <h4 class="title"><a href="/philosophers?location=&start_date=&specialty=Epistemology&commit=Search">Epistemology</a></h4>
             <p class="body-small">Epistemology is also known as theory of knowledge. </p>
           </div>
         </div>
