--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -12,8 +12,8 @@
 }
 
 .mapboxgl-popup-content {
-  padding: 0;
-  border-radius: 16px;
+  padding: 0 !important;
+  border-radius: 16px !important;
   box-shadow: $box-shadow-color;
   p {
     color: $high-text-color;
@@ -21,6 +21,10 @@
   }
   text-align: center;
   font-family: 'Open Sans', sans-serif;
+  a:hover {
+    text-decoration: none;
+    text-shadow: 1px 1px 3px rgba(0,0,0, 0.2) ;
+  }
 }
 
 .popup-photo {
@@ -28,6 +32,7 @@
     border-radius: 16px 16px 0 0;
     width: 100%;
     object-fit: cover;
+    object-position: top;
   }
 }
 
@@ -35,7 +40,4 @@
   padding: 8px;
   text-align: left;
   text-decoration: none;
-  &:hover {
-    text-shadow: 1px 1px 3px rgba(0,0,0, 0.2);
-  }
 }
