--- a/app/views/philosophers/index.html.erb
+++ b/app/views/philosophers/index.html.erb
@@ -1,30 +1,28 @@
   <div class="row m-0">
     <div class="col-12 col-lg-7 p-0">
         <div class="cont-index-philosopher">
-          <h1 class="title">Philosopher in <%= params['location'] %>   </h1>
-          <%= form_tag philosophers_path, method: :get do %>
-          <div class="form-group-home">
-              <div class="location-field">
-                <%= text_field_tag :location,
-                  params[:location],
-                  class: "form-control",
-                  id: "search_location",
-                  placeholder: "Where?"
-                %>
-                <input id="start_date" type="text" name="start_date" value="<%= params['start_date'] %>" hidden="true">
-              </div>
-              <div class="specialty-field">
-                  <%= select_tag "specialty", options_for_select(Philosopher::SPECIALTIES, params[:specialty]), class: "form-control", prompt: 'Specialty' %>
-              </div>
-              <div class="prestations-field">
-                <%= select_tag "prestations", options_for_select(Philosopher::PRESTATIONS, params[:prestations]), class: "form-control", prompt: 'Prestations', multiple: true %>
-              </div>
-              <%= submit_tag "Search", class: "primary-btn" %>
-              <%= link_to "Reset search", philosophers_path, class: "secondary-btn" %>
-          </div>
+          <h1 class="title">Philosopher in <%= params['location'] %></h1>
 
-          <% end %>
+            <%= form_tag philosophers_path, method: :get do %>
+              <div class="form-group-home">
+                  <div class="specialty-field">
+                    <%= select_tag "specialty", options_for_select(Philosopher::SPECIALTIES, params[:specialty]), class: "form-control", prompt: 'Specialty' %>
+                  </div>
+                  
+                  <fieldset class="form-group check_boxes required philosopher_prestations">
+                    <div class="con-prestations">
+                      <% Philosopher::PRESTATIONS.each do |prestation| %>
+                        <input class="d-none" type="checkbox" value="<%= prestation %>" name="prestations" id="philosopher_prestations_<%= prestation %>">
 
+                        <label class="prestation-choice" for="philosopher_prestations_<%= prestation %>"><%= prestation %></label>
+                      <% end %>
+                    </div>
+                  </fieldset>
+
+                  <%= submit_tag "Filter", class: "primary-btn" %>
+                  <%= link_to "Reset filter", philosophers_path, class: "reset-search" %>
+              </div>
+            <% end %>
 
           <div class="con-cards-index">
             <% @philosophers.each do |philosopher| %>
